--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,20 @@
 				margin: 0 0 0.5em 0;
 			}
 		
-			form input.button,
+			form input.button
+			{
+				-webkit-appearance: none;
+				display: block;
+				border: 0;
+				width: 100%;
+				padding: 0.75em;
+				-moz-transition: background-color 0.35s ease-in-out;
+				-webkit-transition: background-color 0.35s ease-in-out;
+				-o-transition: background-color 0.35s ease-in-out;
+				-ms-transition: background-color 0.35s ease-in-out;
+				transition: background-color 0.35s ease-in-out;
+			}
+		
 			form input.text,
 			form select,
 			form textarea
