--- a/css/polymer_theme_denim.css
+++ b/css/polymer_theme_denim.css
@@ -632,3 +632,6 @@ html paper-spinner:not([default-spinner])::shadow .circle,
 html /deep/ paper-spinner:not([default-spinner])::shadow .circle {
   border-color: #90a4ae;
 }
+.container-odd {
+  background-color: #373550;
+}
