--- a/css/polymer_denim_custom_light.css
+++ b/css/polymer_denim_custom_light.css
@@ -103,8 +103,8 @@ html /deep/ h6 {
     font-weight: 400;
     margin: 0px;
     padding: 0px;
-    color: white;
-    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
+    color: azure;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.2);
 }
 
 p1 {
@@ -757,6 +757,7 @@ html /deep/ paper-spinner:not([default-spinner])::shadow .circle {
 }
 
 .content-column {
+    text-align: center;
     margin-left: 30px;
     margin-right: 30px;
 }
