Implemented the 'Education' section

--- a/styles.css
+++ b/styles.css
@@ -345,7 +345,7 @@ body .demo-blog {
 }
 
 .demo-blog--blogpost .demo-blog__posts > .mdl-card .mdl-card__media {
-    background-image: url('images/road_big.jpg');
+    background-image: url('images/lindholmen.jpg');
     height: 280px;
 }
 
