--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,8 @@ body {
     background-size: cover;
     background-attachment: fixed;
     /* FIXME: Temp. workaround for vertical scrollbars */
-    
     margin: 0;
 }
-
 body::before {
     background-size: cover;
     background-attachment: fixed;
@@ -19,11 +17,9 @@ body::before {
     top: 0;
     position: fixed;
 }
-
 body .demo-blog {
     font-family: 'Roboto', 'Helvetica', sans-serif;
 }
-
 .demo-blog .demo-blog__posts {
     max-width: 900px;
     padding: 0;
@@ -37,13 +33,11 @@ body .demo-blog {
     -ms-flex-negative: 0;
     flex-shrink: 0;
 }
-
 .demo-blog.mdl-layout .mdl-layout__content {
     padding-top: 230px;
     position: relative;
     -webkit-overflow-scrolling: touch;
 }
-
 .demo-blog .mdl-card {
     display: -webkit-box;
     display: -webkit-flex;
@@ -60,7 +54,6 @@ body .demo-blog {
     align-items: stretch;
     min-height: 360px;
 }
-
 .demo-blog .mdl-card__title {
     padding: 16px;
     -webkit-box-flex: 1;
@@ -68,7 +61,6 @@ body .demo-blog {
     -ms-flex-positive: 1;
     flex-grow: 1;
 }
-
 .demo-blog .mdl-card__media {
     box-sizing: border-box;
     background-size: cover;
@@ -92,12 +84,10 @@ body .demo-blog {
     align-items: flex-end;
     cursor: pointer;
 }
-
 .demo-blog .mdl-card__media a,
 .demo-blog .mdl-card__title a {
     color: inherit;
 }
-
 .demo-blog .mdl-card__supporting-text {
     width: 100%;
     padding: 16px;
@@ -111,28 +101,22 @@ body .demo-blog {
     -ms-flex-align: center;
     align-items: center;
 }
-
 .demo-blog .mdl-card__supporting-text strong {
     font-weight: 400;
 }
-
 .demo-blog .mdl-card__media ~ .mdl-card__supporting-text {
     min-height: 64px;
 }
-
 .demo-blog .mdl-card__supporting-text:not(:last-child) {
     box-sizing: border-box;
     min-height: 76px;
 }
-
 .demo-blog:not(.demo-blog--blogpost) .mdl-card__supporting-text ~ .mdl-card__supporting-text {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
-
 .demo-blog .mdl-card__actions:first-child {
     margin-left: 0;
 }
-
 .demo-blog .meta {
     box-sizing: border-box;
     padding: 16px;
@@ -155,7 +139,6 @@ body .demo-blog {
     justify-content: flex-start;
     height: auto;
 }
-
 .demo-blog .meta > .meta__favorites {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -166,24 +149,20 @@ body .demo-blog {
     font-size: 13px;
     font-weight: 500;
 }
-
 .demo-blog .meta > .meta__favorites .material-icons {
     font-size: 2em;
     cursor: pointer;
     margin-left: 12px;
 }
-
 .demo-blog .mdl-card .meta.meta--fill {
     -webkit-box-pack: justify;
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
 }
-
 .demo-blog .meta > *:first-child {
     margin-right: 16px;
 }
-
 .demo-blog .meta > * {
     display: -webkit-box;
     display: -webkit-flex;
@@ -195,25 +174,21 @@ body .demo-blog {
     -ms-flex-direction: column;
     flex-direction: column;
 }
-
 .demo-blog.is-small-screen .demo-blog__posts > .mdl-card.coffee-pic {
     -webkit-box-ordinal-group: 1;
     -webkit-order: 0;
     -ms-flex-order: 0;
     order: 0;
 }
-
 .demo-blog.is-small-screen .demo-blog__posts > .mdl-card.something-else {
     -webkit-box-ordinal-group: 0;
     -webkit-order: -1;
     -ms-flex-order: -1;
     order: -1;
 }
-
 .demo-blog .coffee-pic .mdl-card__media {
     background-image: url('images/road.jpg');
 }
-
 .demo-blog .something-else .mdl-card__media {
     display: -webkit-box;
     display: -webkit-flex;
@@ -233,7 +208,6 @@ body .demo-blog {
     -ms-flex-align: center;
     align-items: center;
 }
-
 .demo-blog .something-else > button {
     position: absolute;
     top: 0;
@@ -242,34 +216,28 @@ body .demo-blog {
     -ms-transform: translate(0px, -28px);
     transform: translate(0px, -28px);
 }
-
 .demo-blog .something-else .mdl-card__media {
     font-size: 13px;
     font-weight: 500;
     border-top-left-radius: 2px;
     border-top-right-radius: 2px;
 }
-
 .demo-blog .something-else .mdl-card__media img {
     width: 64px;
     height: 64px;
     margin-bottom: 10px;
 }
-
 .demo-blog .something-else .mdl-card__supporting-text {
     background-color: #F5F5F5;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
 }
-
 .demo-blog .on-the-road-again .mdl-card__media {
-    background-image: url('images/lindholmen.jpg');
+    background-image: url('images/chalmers.jpg');
 }
-
 .demo-blog .shopping .mdl-card__media {
-    background-image: url('images/shopping.jpg');
+    background-image: url('images/tools.jpg');
 }
-
 .demo-blog .demo-blog__posts > .demo-nav {
     margin: 12px 15px;
     display: -webkit-box;
@@ -292,74 +260,59 @@ body .demo-blog {
     color: white;
     font-weight: 500;
 }
-
 .demo-blog .demo-blog__posts > .demo-nav > .demo-nav__button {
     color: white;
     text-decoration: none;
 }
-
 .demo-blog .demo-blog__posts > .demo-nav .mdl-button {
     color: rgba(0, 0, 0, 0.54);
     background-color: white;
 }
-
 .demo-blog .demo-blog__posts > .demo-nav > .demo-nav__button:first-child .mdl-button {
     margin-right: 16px;
 }
-
 .demo-blog .demo-blog__posts > .demo-nav > .demo-nav__button:last-child .mdl-button {
     margin-left: 16px;
 }
-
 .demo-blog .mdl-card > a {
     color: inherit;
     text-decoration: none;
     font-weight: inherit;
 }
-
 .demo-blog .mdl-card h3 {
     margin: 0;
 }
-
 .demo-blog .mdl-card h3 a {
     text-decoration: none;
 }
-
 .demo-blog .mdl-card h3.quote:before,
 .demo-blog .mdl-card h3.quote:after {
     display: block;
     font-size: 3em;
     margin-top: 0.5em;
 }
-
 .demo-blog .mdl-card h3.quote:before {
     content: '“';
 }
-
 .demo-blog .mdl-card h3.quote:after {
     content: '”';
 }
-
 .demo-blog--blogpost .custom-header {
     background-color: transparent;
 }
-
 .demo-blog--blogpost .demo-blog__posts > .mdl-card .mdl-card__media {
-    background-image: url('images/lindholmen.jpg');
+    background-image: url('images/chalmers.jpg');
     height: 280px;
 }
-
 .demo-blog--blogpost .comments {
     background-color: #EEE;
 }
-
 .demo-blog--blogpost .meta > * {
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
 }
-
 .demo-blog--blogpost .meta + .mdl-card__supporting-text {
     border: 0;
     display: -webkit-box;
@@ -372,14 +325,12 @@ body .demo-blog {
     -ms-flex-direction: column;
     flex-direction: column;
 }
-
 .demo-blog--blogpost .meta + .mdl-card__supporting-text p {
     max-width: 512px;
     margin: 16px auto;
     font-size: 16px;
     line-height: 28px;
 }
-
 .demo-blog--blogpost .comments {
     display: -webkit-box;
     display: -webkit-flex;
@@ -401,7 +352,6 @@ body .demo-blog {
     padding: 32px;
     box-sizing: border-box;
 }
-
 .demo-blog--blogpost .comments > form {
     display: -webkit-box;
     display: -webkit-flex;
@@ -410,7 +360,6 @@ body .demo-blog {
     flex-diretion: row;
     margin-bottom: 16px;
 }
-
 .demo-blog--blogpost .comments > form .mdl-textfield {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
@@ -419,6 +368,7 @@ body .demo-blog {
     margin-right: 16px;
     color: rgb(97, 97, 97);
 }
+
 /* Workaround for Firefox.
  * User agent stylesheet kept overwriting the font in FF only.
  */
@@ -426,18 +376,15 @@ body .demo-blog {
 .demo-blog--blogpost .comments > form .mdl-textfield .mdl-textfield__input {
     font-family: 'Roboto', 'Helvetica', sans-serif;
 }
-
 .demo-blog--blogpost .comments > form .mdl-textfield input,
 .demo-blog--blogpost .comments > form .mdl-textfield textarea {
     resize: none;
 }
-
 .demo-blog--blogpost .comments > form button {
     margin-top: 20px;
     background-color: rgba(0, 0, 0, 0.24);
     color: white;
 }
-
 .demo-blog--blogpost .comments .comment {
     display: -webkit-box;
     display: -webkit-flex;
@@ -453,7 +400,6 @@ body .demo-blog {
     -ms-flex-align: stretch;
     align-items: stretch;
 }
-
 .demo-blog--blogpost .comments .comment > .comment__header {
     display: -webkit-box;
     display: -webkit-flex;
@@ -470,14 +416,12 @@ body .demo-blog {
     align-items: center;
     margin-bottom: 16px;
 }
-
 .demo-blog--blogpost .comments .comment > .comment__header > .comment__avatar {
     width: 48px;
     height: 48px;
     border-radius: 24px;
     margin-right: 16px;
 }
-
 .demo-blog--blogpost .comments .comment > .comment__header > .comment__author {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
@@ -493,11 +437,9 @@ body .demo-blog {
     -ms-flex-direction: column;
     flex-direction: column;
 }
-
 .demo-blog--blogpost .comments .comment > .comment__text {
     line-height: 1.5em;
 }
-
 .demo-blog--blogpost .comments .comment > .comment__actions {
     display: -webkit-box;
     display: -webkit-flex;
@@ -519,17 +461,14 @@ body .demo-blog {
     font-size: 0.8em;
     margin-top: 16px;
 }
-
 .demo-blog--blogpost .comments .comment > .comment__actions button {
     margin-right: 16px;
     color: rgba(0, 0, 0, 0.24);
 }
-
 .demo-blog--blogpost .comments .comment > .comment__answers {
     padding-top: 32px;
     padding-left: 48px;
 }
-
 .demo-blog--blogpost .demo-back {
     position: absolute;
     top: 16px;
@@ -537,23 +476,19 @@ body .demo-blog {
     color: white;
     z-index: 9999;
 }
-
 .demo-blog .section-spacer {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
 }
-
 .demo-blog .something-else {
     overflow: visible;
     z-index: 10;
 }
-
 .demo-blog .amazing .mdl-card__title {
     background-color: #263238;
 }
-
 .demo-blog .minilogo {
     width: 44px;
     height: 44px;
@@ -563,6 +498,7 @@ body .demo-blog {
     border-radius: 22px;
     background-color: #F5F5F5;
 }
+
 /* Fixes for IE 10 */
 
 .mdl-grid {
@@ -571,7 +507,6 @@ body .demo-blog {
     display: -ms-flexbox !important;
     display: flex !important;
 }
-
 .social-btn {
     background-position: center;
     background-size: contain;
@@ -584,28 +519,22 @@ body .demo-blog {
     opacity: 0.46;
     border-radius: 2px;
 }
-
 .social-btn__twitter {
     background-image: url('https://www.gstatic.com/images/icons/material/system/2x/post_twitter_black_24dp.png');
 }
-
 .social-btn__blogger {
     background-image: url('https://www.gstatic.com/images/icons/material/system/2x/post_facebook_black_24dp.png');
 }
-
 .social-btn__gplus {
     background-image: url('https://www.gstatic.com/images/icons/material/system/2x/post_gplus_black_24dp.png');
 }
-
 .social-btn__linkedin {
     background-image: url('https://www.gstatic.com/images/icons/material/system/2x/post_linkedin_black_24dp.png');
 }
-
 .social-btn__share {
     color: rgba(0, 0, 0, 0.54);
     background: transparent;
 }
-
 .demo-blog .mdl-mini-footer {
     margin-top: 80px;
     height: 120px;
