--- a/css/style.css
+++ b/css/style.css
@@ -1,258 +1,284 @@
-html, body{
-	background-color: #f5f5f5;
-	font-family: Roboto;
-	color: #212121;
+html,
+body {
+    background-color: #f5f5f5;
+    font-family: Roboto;
+    color: #212121;
 }
-h1{
-	font-size: 26px;
-	font-weight: 600;
-	margin: 0px 0px 30px 0px;
+h1 {
+    font-size: 26px;
+    font-weight: 600;
+    margin: 0px 0px 30px 0px;
 }
-p{
-	font-size: 16px;
-	font-weight: 400;
-	margin: 0px 0px 40px 0px;
+p {
+    font-size: 16px;
+    font-weight: 400;
+    margin: 0px 0px 40px 0px;
 }
 
 /*Header CSS*/
-header{
-	background-color: #2b98d4;
-	min-height: 150px;
-	color: #fff;
+
+header {
+    background-color: #1C87BD;
+    min-height: 150px;
+    color: #fff;
 }
-.user-header{
-	margin-bottom: 60px;
+.user-header {
+    margin-bottom: 60px;
 }
-.user-header img{
-	position: relative;
-	border: 10px solid #2b98d4;
-	height: 220px;
-	width: 220px;
+.user-header img {
+    position: relative;
+    border: 10px solid #1C87BD;
+    height: 220px;
+    width: 220px;
     margin-left: auto;
     margin-right: auto;
     margin-top: -120px;
 }
-.user-header h1{
-	font-size: 36px;
-	margin: 25px 0px 0px 0px;
+.user-header h1 {
+    font-size: 36px;
+    margin: 25px 0px 0px 0px;
 }
-.user-header h4{
-	font-size: 24px;
-	font-weight: 300;
+.user-header h4 {
+    font-size: 24px;
+    font-weight: 300;
 }
-.left-menu{
-	padding-top: 50px;
+.left-menu {
+    padding-top: 50px;
 }
-.left-menu a, .page-title{
-	font-size: 24px;
-	text-transform: uppercase;
-	font-weight: 600;
-	color: #fff;
+.left-menu a,
+.page-title {
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #fff;
 }
-.page-title{
-	margin-left: 15px;
+.page-title {
+    margin-left: 15px;
 }
 .left-menu a i {
-	height: 48px;
-	width: 48px;
-	padding: 12px 0px 0px 12px;
-	background: #fff;
-	border-radius: 50%;
-	color: #2b98d4;
-	 -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
+    height: 48px;
+    width: 48px;
+    padding: 12px 0px 0px 12px;
+    background: #fff;
+    border-radius: 50%;
+    color: #1C87BD;
+    -o-transition: .5s;
+    -ms-transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
 }
-.left-menu a:hover, .left-menu a:focus{
-	text-decoration: none;
+.left-menu a:hover,
+.left-menu a:focus {
+    text-decoration: none;
 }
-.left-menu i:hover, .left-menu i:focus{
-	background-color: #2586ba;
-	color: #fff;
-
+.left-menu i:hover,
+.left-menu i:focus {
+    background-color: #2586ba;
+    color: #fff;
 }
 
 /*About me section*/
-.about-me, .card{
-	background-color: #fff;
-	padding: 40px;
-	border-bottom: 2px solid #e0e0e0;
-	margin: 0px 0px 40px 0px;
+
+.about-me,
+.card {
+    background-color: #fff;
+    padding: 40px;
+    border-bottom: 2px solid #e0e0e0;
+    margin: 0px 0px 40px 0px;
 }
-.about-me .icons, .card .icons{
-	background-color: #2b98d4;
-	color: #fff;
-	height: 50px;
-	width: 50px;
-	font-size: 24px;
-	border-radius: 50%;
-	padding: 13px 0px 0px 14px;
-	margin-top: -20px;
-  	margin-right: -20px;
+.about-me .icons,
+.card .icons {
+    background-color: #1C87BD;
+    color: #fff;
+    height: 50px;
+    width: 50px;
+    font-size: 24px;
+    border-radius: 50%;
+    padding: 13px 0px 0px 14px;
+    margin-top: -20px;
+    margin-right: -20px;
 }
-.about-me a, .card a{
-	font-size: 16px;
-	text-transform: uppercase;
-	margin-top: 40px;
-	color: #488fcc;
+.about-me a,
+.card a {
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-top: 40px;
+    color: #488fcc;
 }
-.about-me a:hover, .about-me a:focus{
-	text-decoration: none;
+.about-me a:hover,
+.about-me a:focus {
+    text-decoration: none;
 }
 
 /*Contact*/
-.card ul, .contact ul{
-	margin: 0;
-	padding: 0;
+
+.card ul,
+.contact ul {
+    margin: 0;
+    padding: 0;
 }
-.card ul li, .contact ul li{
-	list-style: none;
-	margin-bottom: 20px;
+.card ul li,
+.contact ul li {
+    list-style: none;
+    margin-bottom: 20px;
 }
-.card ul li i{
-	padding: 12px 0px 0px 12px;
+.card ul li i {
+    padding: 12px 0px 0px 12px;
 }
-.card i, .contact i{
-	float: left;
-	height: 40px;
-	width: 40px;
-	color: #fff;
-	background-color: #2b98d4;
-	border-radius: 50%;
-	font-size: 18px;
-	padding: 12px 0px 0px 15px;
-	margin-right: 10px;
+.card i,
+.contact i {
+    float: left;
+    height: 40px;
+    width: 40px;
+    color: #fff;
+    background-color: #1C87BD;
+    border-radius: 50%;
+    font-size: 18px;
+    padding: 12px 0px 0px 15px;
+    margin-right: 10px;
 }
-.card p, .contact p{
-	margin: 0px;
-	font-size: 16px;
-	margin-bottom: 30px;
+.card p,
+.contact p {
+    margin: 0px;
+    font-size: 16px;
+    margin-bottom: 30px;
 }
 
 /*My skills*/
-.skills .progress{
-	overflow: visible;
-	box-shadow: none;
-	border: 1px solid #2b98d4;
-	background-color: #fff;
-	height: 10px;
-	border-radius: 10px;
+
+.skills .progress {
+    overflow: visible;
+    box-shadow: none;
+    border: 1px solid #1C87BD;
+    background-color: #fff;
+    height: 10px;
+    border-radius: 10px;
 }
-.skills .progress-bar{
-	background-color: #2b98d4;
-	box-shadow: none;
+.skills .progress-bar {
+    background-color: #1C87BD;
+    box-shadow: none;
 }
-.skills .progress-bar:after{
-	content: "";
-	height: 30px;
-	width: 30px;
-	border-radius: 50%;
-	background-color: #2b98d4;
-	margin-right: -15px;
-  	margin-top: -12px;
-	border: 4px solid #fff;
-	float: right;
+.skills .progress-bar:after {
+    content: "";
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: #1C87BD;
+    margin-right: -15px;
+    margin-top: -12px;
+    border: 4px solid #fff;
+    float: right;
 }
-.skills p{
-	margin-bottom: 10px;
+.skills p {
+    margin-bottom: 10px;
 }
 
 /*Language*/
-.language img{
-	border-radius: 10px;
-	width: 100%;
-	border: 2px solid #fff;
+
+.language img {
+    border-radius: 10px;
+    width: 100%;
+    border: 2px solid #fff;
 }
-.language .star{
-	float: none;
-	color: #fed600;
-	padding: 0;
-	background-color: transparent;
-	height: auto;
-	width: auto;
-	margin-top: 10px;
-	font-size: 20px;
-	margin: 0px;
+.language .star {
+    float: none;
+    color: #fed600;
+    padding: 0;
+    background-color: transparent;
+    height: auto;
+    width: auto;
+    margin-top: 10px;
+    font-size: 20px;
+    margin: 0px;
 }
-.language h4{
-	text-transform: uppercase;
-	font-size: 18px;
-	margin: 15px 0px 5px 0px;
-	padding: 0;
+.language h4 {
+    text-transform: uppercase;
+    font-size: 18px;
+    margin: 15px 0px 5px 0px;
+    padding: 0;
 }
 
 /*Work experiences*/
-.work h4, .education h4{
-	font-size: 20px;
-	text-transform: uppercase;
-	color: #2b98d4;
-	margin: 0px 0px 10px 0px;
-	padding: 0;
+
+.work h4,
+.education h4 {
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #1C87BD;
+    margin: 0px 0px 10px 0px;
+    padding: 0;
 }
-.work small, .education small{
-	font-size: 14px;
-	color: #757575;
+.work small,
+.education small {
+    font-size: 14px;
+    color: #757575;
 }
-.work p, .education p, .pcard p{
-	margin: 10px 0px 0px 0px;
-	font-size: 14px;
+.work p,
+.education p,
+.pcard p {
+    margin: 10px 0px 0px 0px;
+    font-size: 14px;
 }
 
 /*Portfolio Page*/
-.pcard, .pcard2{
-	background-color: #fff;
-	border-bottom: 2px solid #e0e0e0;
-	padding: 40px;
-	margin-bottom: 40px;
+
+.pcard,
+.pcard2 {
+    background-color: #fff;
+    border-bottom: 2px solid #e0e0e0;
+    padding: 40px;
+    margin-bottom: 40px;
 }
-.pcard img{
-	width: 100%;
+.pcard img {
+    width: 100%;
 }
-.pcard2 img{
-	width: 100%;
+.pcard2 img {
+    width: 100%;
 }
-.pcard h2, .pcard2 h2{
-	font-size: 24px;
-	margin: 30px 0px 20px 0px;
+.pcard h2,
+.pcard2 h2 {
+    font-size: 24px;
+    margin: 30px 0px 20px 0px;
 }
-.project-image{
-	overflow: hidden;
-	position: relative;
-	height: 250px;
+.project-image {
+    overflow: hidden;
+    position: relative;
+    height: 250px;
 }
-.pcard p{
-	margin-bottom: 20px;
+.pcard p {
+    margin-bottom: 20px;
 }
-.pcard a{
-	font-size: 16px;
-	font-weight: 500;
-	color: #2b98d4;
-	text-transform: uppercase;
+.pcard a {
+    font-size: 16px;
+    font-weight: 500;
+    color: #1C87BD;
+    text-transform: uppercase;
 }
-.pcard a:hover, .pcard a:focus{
-	text-decoration: none;
+.pcard a:hover,
+.pcard a:focus {
+    text-decoration: none;
 }
 
 /*=====================
 Cover Leter Stylesheet
 ======================*/
-.cover-letter h4{
-	font-weight: normal;
-	line-height: 24px;
-	font-size: 20px;
-	margin-bottom: 30px;
+
+.cover-letter h4 {
+    font-weight: normal;
+    line-height: 24px;
+    font-size: 20px;
+    margin-bottom: 30px;
 }
-.cover-letter small{
-	font-size: 16px;
-	color: #2b98d4;
+.cover-letter small {
+    font-size: 16px;
+    color: #1C87BD;
 }
-.cover-letter h5{
-	font-size: 18px;
+.cover-letter h5 {
+    font-size: 18px;
 }
-.cover-letter .name{
-	font-family: 'Pacifico', cursive;
-	margin-top: 10px;
-	font-size: 20px;
-	color: #2b98d4;
+.cover-letter .name {
+    font-family: 'Pacifico', cursive;
+    margin-top: 10px;
+    font-size: 20px;
+    color: #1C87BD;
 }
