--- a/css/common.css
+++ b/css/common.css
@@ -1,62 +1,66 @@
 /* =============================================================
 GENERAL STYLES
 ============================================================ */
-.p-set
-{
-    padding-top:120px;
-    line-height:30px;
-    color:#fff;
-    font-size:16px;
+
+.p-set {
+    padding-top: 120px;
+    line-height: 30px;
+    color: #fff;
+    font-size: 16px;
 }
 .hr-set {
-    border-top:1px solid rgba(0, 0, 0, 0)!important;
-    margin-bottom:5px;
+    border-top: 1px solid rgba(0, 0, 0, 0)!important;
+    margin-bottom: 5px;
 }
 .hr-set-two {
-    border-top:1px solid rgba(0, 0, 0, 0.05)!important;
+    border-top: 1px solid rgba(0, 0, 0, 0.05)!important;
     margin-bottom: 15px;
 }
+
 /* =============================================================
 SIDE MENU STYLES
 ============================================================ */
+
 #side-menu {
-    height:100%;
-    position:fixed;
-    top:-1000px;
-    left:-250px;
-    background-color:#fff;
-    color:#bdbdbd;
-    z-index:999;
-    overflow:auto;
+    height: 100%;
+    position: fixed;
+    top: -1000px;
+    left: -250px;
+    background-color: #fff;
+    color: #bdbdbd;
+    z-index: 999;
+    overflow: auto;
     min-width: 260px;
 }
 #side-menu ul {
-list-style:none;
-padding:0px;
+    list-style: none;
+    padding: 0px;
 }
 #side-menu ul li {
     padding: 0;
     font-weight: 600;
 }
-
 #side-menu ul li a i {
-padding-right:10px;
+    padding-right: 10px;
 }
-#side-menu ul li a,#side-menu ul li a:hover {
+#side-menu ul li a,
+#side-menu ul li a:hover {
     color: #757575;
     text-decoration: none;
     padding: 15px 30px;
     font-size: 16px;
     display: block;
 }
-#side-menu ul li a:hover, #side-menu ul li a:focus, #side-menu ul li .active{
+#side-menu ul li a:hover,
+#side-menu ul li a:focus,
+#side-menu ul li .active {
     background-color: #f2f2f2;
 }
 .logo-text {
     padding: 20px 30px;
     cursor: pointer;
-    font-size:20px;
-    font-weight:900;
+    font-size: 20px;
+    font-weight: 900;
 }
 .menu-close-icon {
     padding: 6px 15px;
@@ -66,15 +70,16 @@ padding-right:10px;
     float: right;
 }
 .menu-open-icon {
-    cursor:pointer;
+    cursor: pointer;
 }
 .intro-txt {
-padding:20px;
+    padding: 20px;
 }
 
 /*Preloader*/
-#loading{
-    background-color: #2b98d4;
+
+#loading {
+    background-color: #1FD662;
     height: 100%;
     width: 100%;
     position: fixed;
@@ -82,7 +87,7 @@ padding:20px;
     margin-top: 0px;
     top: 0px;
 }
-#loading-center{
+#loading-center {
     width: 100%;
     height: 100%;
     position: relative;
@@ -96,7 +101,7 @@ padding:20px;
     margin-top: -75px;
     margin-left: -75px;
 }
-.object{
+.object {
     width: 20px;
     height: 20px;
     background-color: #FFF;
@@ -107,82 +112,59 @@ padding:20px;
     -webkit-border-radius: 50% 50% 50% 50%;
     border-radius: 50% 50% 50% 50%;
 }
-
-#object_one {   
+#object_one {
     -webkit-animation: object_one 1.5s infinite;
     animation: object_one 1.5s infinite;
-    }
+}
 #object_two {
     -webkit-animation: object_two 1.5s infinite;
     animation: object_two 1.5s infinite;
-    -webkit-animation-delay: 0.25s; 
+    -webkit-animation-delay: 0.25s;
     animation-delay: 0.25s;
-    }
+}
 #object_three {
     -webkit-animation: object_three 1.5s infinite;
     animation: object_three 1.5s infinite;
     -webkit-animation-delay: 0.5s;
     animation-delay: 0.5s;
-    
-    }
-
-    
-
-
-
-
-
-
+}
 @-webkit-keyframes object_one {
-75% { -webkit-transform: scale(0); }
+    75% {
+        -webkit-transform: scale(0);
+    }
 }
-
 @keyframes object_one {
-
-  75% { 
-    transform: scale(0);
-    -webkit-transform: scale(0);
-  }
-
+    75% {
+        transform: scale(0);
+        -webkit-transform: scale(0);
+    }
 }
-
-
-
-
-
 @-webkit-keyframes object_two {
- 
-
-  75% { -webkit-transform: scale(0); }
-
-
+    75% {
+        -webkit-transform: scale(0);
+    }
 }
-
 @keyframes object_two {
-  75% { 
-    transform: scale(0);
-    -webkit-transform:  scale(0);
-  }
-
+    75% {
+        transform: scale(0);
+        -webkit-transform: scale(0);
+    }
 }
-
 @-webkit-keyframes object_three {
-
-  75% { -webkit-transform: scale(0); }
-
+    75% {
+        -webkit-transform: scale(0);
+    }
 }
-
 @keyframes object_three {
-
-  75% { 
-    transform: scale(0);
-    -webkit-transform: scale(0);
-  }
-  
+    75% {
+        transform: scale(0);
+        -webkit-transform: scale(0);
+    }
 }
 
 /*Goto top*/
-.back-to-top{
+
+.back-to-top {
     cursor: pointer;
     position: fixed;
     bottom: 20px;
@@ -192,10 +174,11 @@ padding:20px;
     font-size: 24px;
     border-radius: 2px;
     padding: 6px 0px 0px 0px;
-    display:none;
-    background-color: #2b98d4;
+    display: none;
+    background-color: #1FD662;
     border: none;
 }
-.back-to-top:hover, .back-to-top:focus{
+.back-to-top:hover,
+.back-to-top:focus {
     background-color: #2586ba;
 }
