--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ p {
 /*Header CSS*/
 
 header {
-    background-color: #c80b28;
+    background-color: #afc5d5;
     min-height: 150px;
     color: #fff;
 }
@@ -27,7 +27,7 @@ header {
 }
 .user-header img {
     position: relative;
-    border: 10px solid #c80b28;
+    border: 10px solid #afc5d5;
     height: 220px;
     width: 220px;
     margin-left: auto;
@@ -61,7 +61,7 @@ header {
     padding: 12px 0px 0px 12px;
     background: #fff;
     border-radius: 50%;
-    color: #c80b28;
+    color: #afc5d5;
     -o-transition: .5s;
     -ms-transition: .5s;
     -moz-transition: .5s;
@@ -88,7 +88,7 @@ header {
 }
 .about-me .icons,
 .card .icons {
-    background-color: #c80b28;
+    background-color: #afc5d5;
     color: #fff;
     height: 50px;
     width: 50px;
@@ -131,7 +131,7 @@ header {
     height: 40px;
     width: 40px;
     color: #fff;
-    background-color: #c80b28;
+    background-color: #afc5d5;
     border-radius: 50%;
     font-size: 18px;
     padding: 12px 0px 0px 15px;
@@ -149,13 +149,13 @@ header {
 .skills .progress {
     overflow: visible;
     box-shadow: none;
-    border: 1px solid #c80b28;
+    border: 1px solid #afc5d5;
     background-color: #fff;
     height: 10px;
     border-radius: 10px;
 }
 .skills .progress-bar {
-    background-color: #c80b28;
+    background-color: #afc5d5;
     box-shadow: none;
 }
 .skills .progress-bar:after {
@@ -163,7 +163,7 @@ header {
     height: 30px;
     width: 30px;
     border-radius: 50%;
-    background-color: #c80b28;
+    background-color: #afc5d5;
     margin-right: -15px;
     margin-top: -12px;
     border: 4px solid #fff;
@@ -204,7 +204,7 @@ header {
 .education h4 {
     font-size: 20px;
     text-transform: uppercase;
-    color: #c80b28;
+    color: #afc5d5;
     margin: 0px 0px 10px 0px;
     padding: 0;
 }
@@ -251,7 +251,7 @@ header {
 .pcard a {
     font-size: 16px;
     font-weight: 500;
-    color: #c80b28;
+    color: #afc5d5;
     text-transform: uppercase;
 }
 .pcard a:hover,
@@ -271,7 +271,7 @@ Cover Leter Stylesheet
 }
 .cover-letter small {
     font-size: 16px;
-    color: #c80b28;
+    color: #afc5d5;
 }
 .cover-letter h5 {
     font-size: 18px;
@@ -280,5 +280,5 @@ Cover Leter Stylesheet
     font-family: 'Pacifico', cursive;
     margin-top: 10px;
     font-size: 20px;
-    color: #c80b28;
+    color: #afc5d5;
 }
